--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday!!! :)</title>
+  <title>Happy Birthday Beyonceeee!!! 😭</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
@@ -21,7 +21,20 @@
       <p class="two" data-node-name="greetingText">I really like your name btw!</p>
     </div>
     <div class="three">
+      <img src="img/nyasha-flowers.jpeg" alt="" class="nyasha-flowers">
       <p data-node-name="text1">It's your birthday!!! :D</p>
+    </div>
+    <div class="photo-1">
+      <img src="img/nyasha2.jpeg" alt="" class="extra-photo">
+      <p class="photo-caption" data-node-name="photo1Text">Add your caption here...</p>
+    </div>
+    <div class="photo-2">
+      <img src="img/nyasha3.jpeg" alt="" class="extra-photo">
+      <p class="photo-caption" data-node-name="photo2Text">Add your caption here...</p>
+    </div>
+    <div class="photo-3">
+      <img src="img/nyasha4.jpeg" alt="" class="extra-photo">
+      <p class="photo-caption" data-node-name="photo3Text">Add your caption here...</p>
     </div>
     <div class="four">
       <div class="text-box">
@@ -46,8 +59,9 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath">
-      <img src="img/hat.svg" alt="" class="hat">
+      <div class="main-photo-wrapper">
+        <img src="img/nyasha.jpeg" alt="" class="lydia-dp" data-node-name="imagePath">
+      </div>
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
         <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
@@ -125,6 +139,7 @@
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
     </div>
   </div>
+  <audio id="bg-music" src="audio/Blessed - Daniel Caesar.mp3" loop></audio>
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
