--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 </head>
 
 <body>
+  <div id="tap-overlay">
+    <div class="tap-content">
+      <p>🎁</p>
+      <p>Tap to open</p>
+    </div>
+  </div>
   <div class="container">
     <div class="one">
       <h1 class="one">
